Made photos compression, changed products filter, added star rating in a comments section, made some changes in cart context

--- a/src/pages/Auth.scss
+++ b/src/pages/Auth.scss
@@ -69,6 +69,10 @@
 			.auth-link {
 				font-weight: bold;
 				text-decoration: underline;
+				transition: all 0.3s ease;
+				&:hover {
+					color: $yellow;
+				}
 			}
 		}
 	}
