--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -32,13 +32,12 @@
 			border-radius: 4px;
 			border: 1px solid $black;
 			font-size: 1.4rem;
-		}
-		.cart-btn:first-child {
-			background: none;
-		}
-		.cart-btn:last-child {
 			background-color: $yellow;
 		}
+		.continue-btn {
+			background: none;
+		}
+
 		.cart-btn-disabled {
 			padding: 0.2em 0.5em;
 			font-weight: 600;
