--- a/src/pages/Details/Reviews/Reviews.scss
+++ b/src/pages/Details/Reviews/Reviews.scss
@@ -27,15 +27,7 @@
 				padding: 1em;
 				border-radius: 4px;
 				border: 1px solid #ddd;
-				.stars-box {
-					.star {
-						font-size: 1.4rem;
-						color: gold;
-					}
-					.star:last-child {
-						color: #777;
-					}
-				}
+
 				.reviews-name {
 					font-size: 1.2rem;
 					font-weight: 600;
@@ -57,11 +49,13 @@
 				display: flex;
 				flex-direction: column;
 				margin: 1em 0;
+
 				.reviews-form-text {
 					font-size: 1.4rem;
 					color: $gray-text;
 				}
 				.reviews-textarea {
+					padding: 1em;
 					border: 1px solid #ddd;
 					resize: vertical;
 					min-height: 100px;
@@ -103,11 +97,6 @@
 					font-size: 6rem;
 				}
 				.reviews-body {
-					.stars-box {
-						.star {
-							font-size: 2rem;
-						}
-					}
 					.reviews-name {
 						font-size: 1.6rem;
 					}
