--- a/src/pages/Home/NewAndBestsellers/NewAndBestsellers.scss
+++ b/src/pages/Home/NewAndBestsellers/NewAndBestsellers.scss
@@ -71,14 +71,14 @@
 			border-radius: 4px;
 			transition: all 0.3s ease;
 			cursor: pointer;
+			&:hover {
+				background-color: $yellow;
+			}
 		}
 	}
 	.nb-item:hover {
 		.nb-img {
 			scale: 1.1;
-		}
-		.nb-btn {
-			background-color: $yellow;
 		}
 	}
 }
