--- a/src/pages/Stores/Stores.scss
+++ b/src/pages/Stores/Stores.scss
@@ -14,14 +14,11 @@
 		gap: 2em;
 		border-radius: 4px;
 		box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-		.stores-image-container {
-			height: 200px;
-			border-radius: 4px;
-			flex: 1;
-		}
+
+		
 		.stores-text-box {
 			padding: 1em;
-			flex: 1;
+
 			.stores-name {
 				font-size: 2rem;
 				font-weight: 600;
@@ -57,31 +54,16 @@
 			}
 		}
 	}
-	.stores-box:nth-child(1) {
-		.stores-image-container {
-			background-image: url("../../assets/images/store.jpg");
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-	}
-	.stores-box:nth-child(2) {
-		.stores-image-container {
-			background-image: url("../../assets/images/store-2.jpg");
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-	}
 }
 @media screen and (min-width: 768px) {
 	.stores-container {
 		.stores-box {
 			flex-direction: row;
-			height: 200px;
-			.stores-image-container {
-				height: 100%;
+			height: 250px;
+			.stores-img {
+				width: 40%;
 			}
+			
 		}
 	}
 }
