--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,10 @@
 @use "../../colors" as *;
 
 .navbar {
-	position: relative;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
 	padding: 3em 0;
 	background-color: $black;
 	.active {
@@ -130,6 +133,12 @@
 			}
 		}
 	}
+}
+.sticky-nav {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
 }
 
 @media screen and (min-width: 768px) {
