--- a/src/pages/Home/Header/Header.scss
+++ b/src/pages/Home/Header/Header.scss
@@ -1,5 +1,6 @@
 @use "../../../colors" as *;
 .header {
+	margin-top: 10em;
 	background-color: $dark-gray;
 	.header-container {
 		display: flex;
@@ -161,6 +162,11 @@
 				}
 			}
 		}
+	}
+}
+@media screen and (min-width: 1100px) {
+	.header {
+		margin-top: 18em;
 	}
 }
 @media screen and (min-width: 1400px) {
